# VSOSH-REG-2026

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
data/logs/: normal.jsonl  with_anomalies.jsonl
grafana/dashboards/: anomalies.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
scripts/: generate_logs.py  ingest_file.py  inkscape-wrapper.sh  train.py
src/api/: main.py
src/application/: features.py  ingestion.py  model.py  parsers.py  services.py  synthetic.py  training.py
src/domain/: models.py  normalization.py
src/infrastructure/: logging.py  registry.py  settings.py  storage.py
src/infrastructure/models/: baseline.py  isolation_forest.py
tests/: test_api.py  test_features.py  test_models.py  test_normalization.py  test_parsers.py
